<resources>
    <string name="app_name">TRAVEL BOT</string>
    <string name="Success">Success</string>
    <string name="verifying">Verifying</string>



    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">Home Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="server_error">Server Error</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="abcd">ABCD</string>

    <string-array name="select_language">
        <item>--select language--</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Kannada</item>
    </string-array>

    <string-array name="select_state">
        <item>--select state--</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Goa</item>
        <item>Chhattisgarh</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadar and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Lakshadweep</item>
        <item>Puducherry (Pondicherry)</item>
    </string-array>
    <string name="title_activity_user_login">Sign in</string>




    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email         completions.</string>
    <string name="speech_not_supported">Speech Not Supported</string>
    <string name="enter_the_source_and_destination_of_travel">Enter the Source and Destination of Travel</string>
    <string name="login_">LOGIN</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="register_">REGISTER</string>
    <string name="register_page">REGISTER PAGE</string>
    <string name="skip">SKIP</string>
    <string name="register">REGISTER</string>
    <string name="state_and_language_selection_dropdown">State And Language Selection Dropdown</string>
    <string name="select_state">SELECT STATE</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="continue_">CONTINUE</string>
    <string name="from_">From</string>
    <string name="to_">To</string>
    <string name="journey_date">Journey Date</string>
    <string name="your_ticket_has_been_confirmed">Your ticket has been confirmed.</string>
    <string name="thank_you">Thank You</string>
    <string name="list_of_available_trains">List of Available Trains</string>
    <string name="ticket_booking_details">Ticket Booking Details</string>
    <string name="train_name">Train Name:</string>
    <string name="train_number">Train Number:</string>
    <string name="cost">Cost:</string>
    <string name="source">Source:</string>
    <string name="destination">Destination:</string>
    <string name="confirm">Confirm</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_date">Enter Date</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="email_id">Email id:</string>
    <string name="mobile">Mobile:</string>

    <string name="togglebutton">Toggle Button</string>


</resources>
