<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.pmaptechnotech.travelbot.activities.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4675c7"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login_page"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

        <EditText
            android:id="@+id/edt_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/border"
            android:hint="@string/mobile_number"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="#d2ddf0"
            android:text="@string/login_"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold|normal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="#d2ddf0"
            android:text="@string/register_"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold|normal" />

        <include layout="@layout/speech_layout" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
