<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.pmaptechnotech.travelbot.activities.SourceAndDestinationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d2ddf0"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/enter_the_source_and_destination_of_travel"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/from_"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold|normal" />

            <EditText
                android:id="@+id/edt_from_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/enter_city"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_to_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/to_"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold|normal" />

            <EditText
                android:id="@+id/edt_to_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/enter_city"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/journey_date"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold|normal" />

            <EditText
                android:id="@+id/edt_journey_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/enter_date"
                android:textColor="#000000"
                android:textSize="25sp" />

            <!-- <Button
                 android:id="@+id/btn_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:background="#d2ddf0"
                 android:text="Next"
                 android:textColor="#000000"
                 android:textSize="30dp"
                 android:textStyle="bold|normal" />
     -->
            <include layout="@layout/speech_layout" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
