<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.pmaptechnotech.travelbot.activities.ReservationBookingConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d2ddf0"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ticket_booking_details"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold|normal" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15sp"
            android:text="@string/train_name"
            android:textColor="#000000"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:id="@+id/txt_train_name"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:textStyle="bold|normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15sp"
            android:text="@string/train_number"
            android:textColor="#000000"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:id="@+id/txt_train_number"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:textStyle="bold|normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15sp"
            android:text="@string/cost"
            android:textColor="#000000"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:id="@+id/txt_Cost"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:textStyle="bold|normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15sp"
            android:text="@string/source"
            android:textColor="#000000"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:id="@+id/txt_Source"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:textStyle="bold|normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="15sp"
            android:text="@string/destination"
            android:textColor="#000000"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:id="@+id/txt_Destination"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:textStyle="bold|normal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <ProgressBar
            android:id="@+id/pb_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:text="Please Wait, Payment Processing..." />

        <Button
            android:id="@+id/btn_confirm"
            android:text="@string/confirm"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textStyle="bold|normal"
            android:background="#d2ddf0"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
